hard-gists/4668212/run.log
=== Docker Run Log for 4668212 ===
Started at: Mi 29. Okt 14:57:24 CET 2025

[2025-10-29 14:57:24] START: Running container for 4668212
[2025-10-29 14:57:25] SUCCESS: Container f4fe3567c13f638dd9c8f28b362c399d9f93009fc14e792cd062a6f7982df90e started for 4668212
=== Container logs for 4668212 ===
  File "/snippet.py", line 25
    print form.example.data
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4668212 ===
[2025-10-29 14:57:27] INFO: Container f4fe3567c13f638dd9c8f28b362c399d9f93009fc14e792cd062a6f7982df90e has stopped
